--- a/exercise.html
+++ b/exercise.html
@@ -25,7 +25,7 @@
     <nav>
       <img src="logo.png" alt="Logo" class="logo">
       <ul class="toolbar">
-        <li><a class="start-button" href="/english4ever">Home</a></li>
+        <li><a class="start-button" href="english4ever.netlify.app">Home</a></li>
         <li><a class="start-button" href="/scribzee.html">Scribzee</a></li>
         <li><a class="start-button" href="/english4ever/exercise.html">Exercise</a></li>
       </ul>
@@ -40,11 +40,27 @@
   <!-- Liste des exercices -->
   <div class="exercise-list">
     <ul id="exercise-list">
-      <li data-exercise="Grammaire"><a href="exercice1.html">Exercice 1 : Grammaire</a></li>
+      <li data-exercise="verb"><a href="irregularverbs.html">True of false : Irregular verbs</a></li>
       <li data-exercise="Vocabulaire"><a href="exercice2.html">Exercice 2 : Vocabulaire</a></li>
       <li data-exercise="Compréhension"><a href="exercice3.html">Exercice 3 : Compréhension</a></li>
       <li data-exercise="Conjugaison"><a href="exercice4.html">Exercice 4 : Conjugaison</a></li>
       <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
+      
     </ul>
   </div>
 
