--- a/exercise.html
+++ b/exercise.html
@@ -27,7 +27,7 @@
       <ul class="toolbar">
         <li><a class="start-button" href="english4ever.netlify.app">Home</a></li>
         <li><a class="start-button" href="/scribzee.html">Scribzee</a></li>
-        <li><a class="start-button" href="/english4ever/exercise.html">Exercise</a></li>
+        <li><a class="start-button" href="/exercise.html">Exercise</a></li>
       </ul>
     </nav>
   </header>
