--- a/exercise.html
+++ b/exercise.html
@@ -40,7 +40,7 @@
   <!-- Liste des exercices -->
   <div class="exercise-list">
     <ul id="exercise-list">
-      <li data-exercise="verb"><a href="irregularverbs.html">True of false : Irregular verbs</a></li>
+      <li data-exercise="True of false : Irregular verbs"><a href="irregularverbs.html">True of false : Irregular verbs</a></li>
       <li data-exercise="Vocabulaire"><a href="exercice2.html">Exercice 2 : Vocabulaire</a></li>
       <li data-exercise="Compréhension"><a href="exercice3.html">Exercice 3 : Compréhension</a></li>
       <li data-exercise="Conjugaison"><a href="exercice4.html">Exercice 4 : Conjugaison</a></li>
