--- a/scribzee.html
+++ b/scribzee.html
@@ -30,9 +30,9 @@
     <nav>
       <img src="logo.png" alt="Logo" class="logo">
       <ul class="toolbar">
-        <li><a class="start-button" href="/english4ever">Home</a></li>
-        <li><a class="start-button" href="/english4ever/scribzee.html">Scribzee</a></li>
-        <li><a class="start-button" href="/english4ever/exercise.html">Exercise</a></li>
+        <li><a class="start-button" href="english4ever.netlify.app">Home</a></li>
+        <li><a class="start-button" href="/scribzee.html">Scribzee</a></li>
+        <li><a class="start-button" href="/exercise.html">Exercise</a></li>
       </ul>
     </nav>
   </header>
