--- a/irregularverbs.html
+++ b/irregularverbs.html
@@ -14,8 +14,8 @@
       <img src="logo.png" alt="Logo" class="logo">
       <ul class="toolbar">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Scribzee</a></li>
-        <li><a href="#">Exercise</a></li>
+        <li><a href="/scribzee.html">Scribzee</a></li>
+        <li><a href="/exercise.html">Exercise</a></li>
       </ul>
     </nav>
   </header>
