--- a/irregularverbs.html
+++ b/irregularverbs.html
@@ -13,7 +13,7 @@
     <nav>
       <img src="logo.png" alt="Logo" class="logo">
       <ul class="toolbar">
-        <li><a href="#">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/scribzee.html">Scribzee</a></li>
         <li><a href="/exercise.html">Exercise</a></li>
       </ul>
