--- a/scribzee.html
+++ b/scribzee.html
@@ -30,7 +30,7 @@
     <nav>
       <img src="logo.png" alt="Logo" class="logo">
       <ul class="toolbar">
-        <li><a class="start-button" href="english4ever.netlify.app">Home</a></li>
+        <li><a class="start-button" href="/">Home</a></li>
         <li><a class="start-button" href="/scribzee.html">Scribzee</a></li>
         <li><a class="start-button" href="/exercise.html">Exercise</a></li>
       </ul>
