--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <p>Ceci est un court texte décrivant la news 3.</p>
     </a>
   </div>
-
+  <iframe width="640px" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=6p5ESFuZpUOaKhCG1grnXbCl2JQPdBtCpaukkP_mFoRUOUJGM0FCUFNQWDZYUTRDRDY4VEFHUzFITS4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
   <!-- Flocons de neige -->
   <div class="snowflakes" aria-hidden="true">
     <div class="snowflake">❅</div>
