--- a/exercise.html
+++ b/exercise.html
@@ -41,7 +41,7 @@
   <div class="exercise-list">
     <ul id="exercise-list">
       <li data-exercise="True of false : Irregular verbs"><a href="irregularverbs.html">True of false : Irregular verbs</a></li>
-      <li data-exercise="Vocabulaire"><a href="exercice2.html">Exercice 2 : Vocabulaire</a></li>
+      <li data-exercise="Should"><a href="should.html">Should</a></li>
       <li data-exercise="Compréhension"><a href="exercice3.html">Exercice 3 : Compréhension</a></li>
       <li data-exercise="Conjugaison"><a href="exercice4.html">Exercice 4 : Conjugaison</a></li>
       <li data-exercise="Expression écrite"><a href="exercice5.html">Exercice 5 : Expression écrite</a></li>
