--- a/wintervoc.html
+++ b/wintervoc.html
@@ -6,7 +6,7 @@
     <title>Winter Vocabulary</title>
 </head>
 <body>
-    <h1>Code PIN = 07683958 . ⚠ Mettre son vrai nom ! Verification possible</h1>
+    <h1>PIN code = 07683958 . ⚠ Enter your real name! Verification possible</h1>
 
     <iframe src="https://kahoot.it/challenge/07683958?challenge-id=fadc8f8a-9201-4832-9873-6415d1dd2b9c_1734100211035" width="100%" height="500px" style="border:none;">
         Votre navigateur ne supporte pas les iframes.
