--- a/scribzee.html
+++ b/scribzee.html
@@ -55,17 +55,17 @@
 
     <div class="pdf-viewer">
       <h3>Document 3</h3>
-      <iframe src="pdf/document3.pdf" width="100%" height="500px"></iframe>
+      <iframe src="document3.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
       <h3>Document 4</h3>
-      <iframe src="pdf/document4.pdf" width="100%" height="500px"></iframe>
+      <iframe src="document4.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
       <h3>Document 5</h3>
-      <iframe src="pdf/document5.pdf" width="100%" height="500px"></iframe>
+      <iframe src="document5.pdf" width="100%" height="500px"></iframe>
     </div>
   </div>
 
