--- a/exercise.html
+++ b/exercise.html
@@ -41,7 +41,7 @@
   <div class="exercise-list">
     <ul id="exercise-list">
       <li data-exercise="True of false : Irregular verbs"><a href="irregularverbs.html">True of false : Irregular verbs</a></li>
-      <li data-exercise="Winter vocabulary"><a href="wintervoc.html">Should</a></li>
+      <li data-exercise="Winter vocabulary"><a href="wintervoc.html">Winter Vocabulary</a></li>
       
     </ul>
   </div>
