--- a/exercise/irregularverbs.html
+++ b/exercise/irregularverbs.html
@@ -35,7 +35,7 @@
     <p>Scoring : <span id="score">0</span>/10</p>
   </div>
  
-  <script src="script.js"></script>
+  <script src="irregular.js"></script>
   <link rel="icon" href="logo.png" type="image/png">
   
   <footer>
