--- a/scribzee.html
+++ b/scribzee.html
@@ -45,27 +45,27 @@
 
     <div class="pdf-viewer">
       <h3>Irregular verbs list</h3>
-      <iframe src="document1.pdf" width="100%" height="500px"></iframe>
+      <iframe src="pdf/document1.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
       <h3>Simple past</h3>
-      <iframe src="document2.pdf" width="100%" height="500px"></iframe>
+      <iframe src="pdf/document2.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
       <h3>Document 3</h3>
-      <iframe src="document3.pdf" width="100%" height="500px"></iframe>
+      <iframe src="pdf/document3.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
       <h3>Document 4</h3>
-      <iframe src="document4.pdf" width="100%" height="500px"></iframe>
+      <iframe src="pdf/document4.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
       <h3>Document 5</h3>
-      <iframe src="document5.pdf" width="100%" height="500px"></iframe>
+      <iframe src="pdf/document5.pdf" width="100%" height="500px"></iframe>
     </div>
   </div>
 
