--- a/exercise/irregularverbs.html
+++ b/exercise/irregularverbs.html
@@ -36,7 +36,7 @@
   </div>
  
   <script src="irregular.js"></script>
-  <link rel="icon" href="logo.png" type="image/png">
+  <link rel="icon" href="english4ever/logo.png" type="image/png">
   
   <footer>
     <p>&copy; 2024 Lucca ELLERO. Tous droits réservés.</p>
