--- a/exercise/irregularverbs.html
+++ b/exercise/irregularverbs.html
@@ -36,10 +36,10 @@
   </div>
  
   <script src="irregular.js"></script>
-  <link rel="icon" href="english4ever/logo.png" type="image/png">
+  <link rel="icon" href="logo.png" type="image/png">
   
   <footer>
-    <p>&copy; 2024 Lucca ELLERO. Tous droits réservés.</p>
+    <p>&copy; 2024 English4ever. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
