--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <!-- Footer modifié -->
   <footer>
-    <p>&copy; 2024 Lucca ELLERO. Tous droits réservés.</p>
+    <p>&copy; 2024 English4ever. All rights reserved.</p>
   </footer>
 </body>
 </html>
