--- a/exercise/irregularverbs.html
+++ b/exercise/irregularverbs.html
@@ -39,7 +39,7 @@
   <link rel="icon" href="logo.png" type="image/png">
   
   <footer>
-    <p>&copy; 2024 English4ever. Tous droits réservés.</p>
+    <p>&copy; 2024 English4ever. All rights reserved.</p>
   </footer>
 </body>
 </html>
