--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   gtag('config', 'G-ELCGX1C996');
 </script>
 <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="a5d8d5a0-ae79-4248-beed-dd6bbf4f49c9" data-blockingmode="auto" type="text/javascript"></script>
+<script id="usercentrics-cmp" src="https://app.usercentrics.eu/browser-ui/latest/loader.js" data-settings-id="_Ro78BJqBiW1FQ" async></script>
 <body>
   <!-- Guirlande de Noël -->
   <div class="guirlande-container">
