--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 
   gtag('config', 'G-ELCGX1C996');
 </script>
-<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="a5d8d5a0-ae79-4248-beed-dd6bbf4f49c9" data-blockingmode="auto" type="text/javascript"></script>
-<script id="usercentrics-cmp" src="https://app.usercentrics.eu/browser-ui/latest/loader.js" data-settings-id="_Ro78BJqBiW1FQ" async></script>
+<script type="text/javascript">
+var _iub = _iub || [];
+_iub.csConfiguration = {"siteId":3871417,"cookiePolicyId":57183102,"lang":"fr","storage":{"useSiteId":true}};
+</script>
+<script type="text/javascript" src="https://cs.iubenda.com/autoblocking/3871417.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
 </head>
 
 <body>
