--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ELCGX1C996"></script>
-<script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/a51dc0b0d2874.js" data-cmp-host="a.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>
-</head>
-
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="80388cd2-cfff-4e1b-b7b2-bdd4e40622d2" type="text/javascript" async></script>
 <body>
   <!-- Guirlande de Noël -->
   <div class="guirlande-container">
