--- a/exercise.html
+++ b/exercise.html
@@ -42,7 +42,7 @@
     <ul id="exercise-list">
       <li data-exercise="True of false : Irregular verbs"><a href="exercise/irregularverbs.html">True of false : Irregular verbs</a></li>
       <li data-exercise="Winter vocabulary"><a href="exercise/wintervoc.html">Winter Vocabulary</a></li>
-      
+      <li data-exercise="Pronom relatifs"><a href="exercise/pronom.html">Who, When, Where</a></li>
     </ul>
   </div>
 
