--- a/exercise.html
+++ b/exercise.html
@@ -56,7 +56,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Lucca ELLERO. Tous droits réservés.</p>
+    <p>&copy; 2025 English4ever. All rights reserved.</p>
   </footer>
 
   <!-- JavaScript pour la barre de recherche -->
