--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>English4ever - Noël</title>
+  <title>English4ever</title>
   <link rel="stylesheet" href="start.css">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <!-- Google tag (gtag.js) -->
@@ -22,7 +22,7 @@
     </nav>
   </header>
 
-  <h1>Welcome on English4ever - Version Noël</h1>
+  <h1>Welcome on English4ever</h1>
   
 
   <!-- Footer modifié -->
