--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   </header>
 
   <h1>Welcome on English4ever</h1>
-  
+
+  <h1>New things coming soon</h1>
 
   <!-- Footer modifié -->
   <footer>
