--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <h1>Welcome on English4ever</h1>
 
-  <h1>New things coming soon</h1>
+  <h1>New things coming soon ...</h1>
 
   <!-- Footer modifié -->
   <footer>
