--- a/scribzee.html
+++ b/scribzee.html
@@ -3,22 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>English4ever - Noël</title>
+  <title>English4ever</title>
   <link rel="stylesheet" href="scribzee.css">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-  <!-- Guirlande de Noël -->
-  <div class="guirlande-container">
-    <div class="guirlande">
-      <div class="light" style="background-color: red;"></div>
-      <div class="light" style="background-color: green;"></div>
-      <div class="light" style="background-color: yellow;"></div>
-      <div class="light" style="background-color: blue;"></div>
-      <div class="light" style="background-color: white;"></div>
-      <div class="light" style="background-color: purple;"></div>
-    </div>
-  </div>
 
   <!-- Lien Scribzee en haut de la page -->
   <div class="scribzee-link">
@@ -37,7 +26,7 @@
     </nav>
   </header>
 
-  <h1>Welcome on English4ever - Version Noël</h1>
+  <h1>Welcome on English4ever</h1>
 
   <!-- Affichage des PDF en ligne -->
   <div class="pdf-container">
@@ -69,13 +58,6 @@
     </div>
   </div>
 
-  <!-- Flocons de neige -->
-  <div class="snowflakes" aria-hidden="true">
-    <div class="snowflake">❅</div>
-    <div class="snowflake">❆</div>
-    <div class="snowflake">❅</div>
-    <div class="snowflake">❆</div>
-  </div>
 
   <!-- Footer modifié -->
   <footer>
