--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <footer>
     <div class="footer-columns">
         <div class="column">
-          <h3>À propos d'English4ever</h3>
+          <h3>About English4ever</h3>
             <ul>
                 <li><a href="#">Newsroom</a></li>
                 <li><a href="#">English4ever project</a></li>
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div class="column">
-          <h3>À propos d'English4ever</h3>
+          <h3>Useful link</h3>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Scribzee</a></li>
