--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <img src="logo.png" alt="Logo" class="logo">
       <ul class="toolbar">
         <li><a class="start-button" href="/">Home</a></li>
-        <li><a class="start-button" href="/scribzee.html">Scribzee</a></li>
-        <li><a class="start-button" href="/exercise.html">Exercise</a></li>
+        <li><a class="start-button" href="/scribzee">Scribzee</a></li>
+        <li><a class="start-button" href="/exercise">Exercise</a></li>
       </ul>
     </nav>
   </header>
