--- a/exercise/index.html
+++ b/exercise/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>English4ever - Noël</title>
+  <title>English4ever</title>
   <link rel="stylesheet" href="exe.css">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </head>
