--- a/exercise/irregularverbs.html
+++ b/exercise/irregularverbs.html
@@ -14,8 +14,8 @@
       <img src="logo.png" alt="Logo" class="logo">
       <ul class="toolbar">
         <li><a href="/">Home</a></li>
-        <li><a href="/scribzee">Scribzee</a></li>
-        <li><a href="/exercise">Exercise</a></li>
+        <li><a href="/scribzee/">Scribzee</a></li>
+        <li><a href="/exercise/">Exercise</a></li>
       </ul>
     </nav>
   </header>
