--- a/scribzee/index.html
+++ b/scribzee/index.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>English4ever</title>
+  <link rel="stylesheet" href="scribzee.css">
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+</head>
+<body>
 
+  <!-- Lien Scribzee en haut de la page -->
+  <div class="scribzee-link">
+    <a href="https://online.scribzee.com" target="_blank">Scribzee official website link</a>
+  </div>
+
+  <!-- Barre de navigation -->
+  <header>
+    <nav>
+      <img src="logo.png" alt="Logo" class="logo">
+      <ul class="toolbar">
+        <li><a class="start-button" href="/">Home</a></li>
+        <li><a class="start-button" href="/scribzee/">Scribzee</a></li>
+        <li><a class="start-button" href="/exercise/">Exercise</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <h1>Welcome on English4ever</h1>
+
+  <!-- Affichage des PDF en ligne -->
+  <div class="pdf-container">
+    <h2>View our PDF resources online:</h2>
+
+    <div class="pdf-viewer">
+      <h3>Irregular verbs list</h3>
+      <iframe src="pdf/document1.pdf" width="100%" height="500px"></iframe>
+    </div>
+
+    <div class="pdf-viewer">
+      <h3>Simple past</h3>
+      <iframe src="pdf/document2.pdf" width="100%" height="500px"></iframe>
+    </div>
+
+    <div class="pdf-viewer">
+      <h3>Document 3</h3>
+      <iframe src="pdf/document3.pdf" width="100%" height="500px"></iframe>
+    </div>
+
+    <div class="pdf-viewer">
+      <h3>Document 4</h3>
+      <iframe src="pdf/document4.pdf" width="100%" height="500px"></iframe>
+    </div>
+
+    <div class="pdf-viewer">
+      <h3>Document 5</h3>
+      <iframe src="pdf/document5.pdf" width="100%" height="500px"></iframe>
+    </div>
+  </div>
+
+
+  <!-- Footer modifié -->
+  <footer>
+    <p>&copy; 2025 English4ever. All rights reserved.</p>
+  </footer>
+</body>
+</html>
