--- a/exercise/irregularverbs.html
+++ b/exercise/irregularverbs.html
@@ -39,7 +39,32 @@
   <link rel="icon" href="logo.png" type="image/png">
   
   <footer>
-    <p>&copy; 2025 English4ever. All rights reserved.</p>
-  </footer>
+    <div class="footer-columns">
+        <div class="column">
+          <h3>About English4ever</h3>
+            <ul>
+                <li><a href="#">Newsroom</a></li>
+                <li><a href="#">English4ever project</a></li>
+                <li><a href="#">Event</a></li>
+                <li><a href="#">Contact English4ever</a></li>
+            </ul>
+        </div>
+        <div class="column">
+          <h3>Useful link</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Scribzee</a></li>
+                <li><a href="#">Exercise</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>Copyright © 2025 English4ever. All right reserved.</p>
+        <ul class="legal">
+            <li><a href="#">Site Map</a></li>
+        </ul>
+        <p>France</p>
+    </div>
+</footer>
 </body>
 </html>
