--- a/scribzee/index.html
+++ b/scribzee/index.html
@@ -34,29 +34,19 @@
 
     <div class="pdf-viewer">
       <h3>Irregular verbs list</h3>
-      <iframe src="english4ever/pdf/document1.pdf" width="100%" height="500px"></iframe>
+      <iframe src="pdf/document1.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
       <h3>Simple past</h3>
-      <iframe src="english4ever/pdf/document2.pdf" width="100%" height="500px"></iframe>
+      <iframe src="pdf/document2.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
-      <h3>Document 3</h3>
-      <iframe src="english4ever/pdf/document3.pdf" width="100%" height="500px"></iframe>
+      <h3>Superlatif</h3>
+      <iframe src="pdf/document3.pdf" width="100%" height="500px"></iframe>
     </div>
 
-    <div class="pdf-viewer">
-      <h3>Document 4</h3>
-      <iframe src="english4ever/pdf/document4.pdf" width="100%" height="500px"></iframe>
-    </div>
-
-    <div class="pdf-viewer">
-      <h3>Document 5</h3>
-      <iframe src="english4ever/pdf/document5.pdf" width="100%" height="500px"></iframe>
-    </div>
-  </div>
 
 
   <footer>
