--- a/scribzee/index.html
+++ b/scribzee/index.html
@@ -34,17 +34,17 @@
 
     <div class="pdf-viewer">
       <h3>Irregular verbs list</h3>
-      <iframe src="pdf/document1.pdf" width="100%" height="500px"></iframe>
+      <iframe src="/pdf/document1.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
       <h3>Simple past</h3>
-      <iframe src="pdf/document2.pdf" width="100%" height="500px"></iframe>
+      <iframe src="/pdf/document2.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
       <h3>Superlatif</h3>
-      <iframe src="pdf/document3.pdf" width="100%" height="500px"></iframe>
+      <iframe src="/pdf/document3.pdf" width="100%" height="500px"></iframe>
     </div>
 
 
