--- a/scribzee/index.html
+++ b/scribzee/index.html
@@ -34,7 +34,7 @@
 
     <div class="pdf-viewer">
       <h3>Irregular verbs list</h3>
-      <iframe src="pdf/document1.pdf" width="100%" height="500px"></iframe>
+      <iframe src="english4ever/scribzee/pdf/document1.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
