--- a/scribzee/index.html
+++ b/scribzee/index.html
@@ -39,12 +39,12 @@
 
     <div class="pdf-viewer">
       <h3>Simple past</h3>
-      <iframe src="/pdf/document2.pdf" width="100%" height="500px"></iframe>
+      <iframe src="/scribzee/pdf/document2.pdf" width="100%" height="500px"></iframe>
     </div>
 
     <div class="pdf-viewer">
       <h3>Superlatif</h3>
-      <iframe src="/pdf/document3.pdf" width="100%" height="500px"></iframe>
+      <iframe src="/scribzee/pdf/document3.pdf" width="100%" height="500px"></iframe>
     </div>
 
 
