--- a/exercise/index.html
+++ b/exercise/index.html
@@ -29,9 +29,9 @@
   <!-- Liste des exercices -->
   <div class="exercise-list">
     <ul id="exercise-list">
-      <li data-exercise="True of false : Irregular verbs"><a href="exercise/irregularverbs.html">True of false : Irregular verbs</a></li>
-      <li data-exercise="Winter vocabulary"><a href="exercise/wintervoc.html">Winter Vocabulary</a></li>
-      <li data-exercise="Pronom relatifs"><a href="exercise/pronom.html">Who, When, Where</a></li>
+      <li data-exercise="True of false : Irregular verbs"><a href="/irregularverbs.html">True of false : Irregular verbs</a></li>
+      <li data-exercise="Winter vocabulary"><a href="/wintervoc.html">Winter Vocabulary</a></li>
+      <li data-exercise="Pronom relatifs"><a href="/pronom.html">Who, When, Where</a></li>
     </ul>
   </div>
 
