--- a/exercise/irregularverbs.html
+++ b/exercise/irregularverbs.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>English4ever</title>
-  <link rel="icon" href="/logo.png" type="image/png">
+  <link rel="icon" href="/logo1.png" type="image/png">
   <link rel="stylesheet" href="irregular.css">
   <!-- Ajouter Canvas Confetti -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
