--- a/exercise/index.html
+++ b/exercise/index.html
@@ -44,7 +44,7 @@
             <ul>
                 <li><a href="#">Newsroom</a></li>
                 <li><a href="#">English4ever project</a></li>
-                <li><a href="#">Event</a></li>
+                <li><a href="#">Lenny a une petite...</a></li>
                 <li><a href="#">Contact English4ever</a></li>
             </ul>
         </div>
